Narrow window for data loading. Fix float formatting.

--- a/TokenHolderBalances.ipynb
+++ b/TokenHolderBalances.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -33,9 +33,7 @@
       "Reading cached results\n",
       "Parsing date\n",
       "Calculating daily sum\n",
-      "Generating permutations\n",
-      "Calculating daily cumulative balance\n",
-      "Writing to records.csv\n"
+      "Generating permutations\n"
      ]
     }
    ],
@@ -74,9 +72,8 @@
     "else:\n",
     "    # For each day, fetch the day's events\n",
     "    start_date = datetime(2021,11,24)\n",
-    "    today = datetime(2021,12,14)\n",
-    "    # today = datetime.today()\n",
-    "    delta = timedelta(hours=12)\n",
+    "    today = datetime.today()\n",
+    "    delta = timedelta(hours=6)\n",
     "\n",
     "    while start_date <= today:\n",
     "        next_date = start_date + delta\n",
@@ -88,7 +85,7 @@
     "        start_date += delta\n",
     "\n",
     "    # Cache the results\n",
-    "    df.to_csv(\"results.csv\")\n",
+    "    df.to_csv(\"results.csv\", float_format=\"%.18f\")\n",
     "    print(\"Wrote cached results\")\n",
     "\n",
     "# Parse the datetime string and convert to date\n",
@@ -111,7 +108,7 @@
     "\n",
     "# Write to file\n",
     "print(\"Writing to records.csv\")\n",
-    "reindexed.to_csv(\"records.csv\", index=False)"
+    "reindexed.to_csv(\"records.csv\", index=False, float_format=\"%.18f\")"
    ]
   }
  ],
