--- a/TokenHolderBalances.ipynb
+++ b/TokenHolderBalances.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,20 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading cached results\n",
-      "Parsing date\n",
-      "Calculating daily sum\n",
-      "Generating permutations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -114,7 +103,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('.venv': poetry)",
+   "display_name": "Python 3.10.6 ('token-subgraph-fetcher-CRgsdJmy-py3.10')",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +122,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "341cc6fbfa6d83fcf2f734022b9c34321423269fff8f7b8220c613f73311937b"
+    "hash": "81dfe72e2f90d4dcd2c9ab24c1697840cabe05ea7921080ffe1dc5e725e6a033"
    }
   }
  },
