--- a/TokenHolderBalances.ipynb
+++ b/TokenHolderBalances.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,11 @@
     "\n",
     "# Write to file\n",
     "print(\"Writing to records.csv\")\n",
-    "reindexed.to_csv(\"records.csv\", index=False, float_format=\"%.18f\")"
+    "reindexed.to_csv(\"records.csv\", index=False, float_format=\"%.18f\")\n",
+    "\n",
+    "# Cache balances by day\n",
+    "# Don't calculate zero balances\n",
+    "# Use previous day balances as starting point"
    ]
   }
  ],
