--- a/TokenHolderBalances.ipynb
+++ b/TokenHolderBalances.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "from datetime import datetime, timedelta, date\n",
     "from subgrounds.subgrounds import Subgrounds\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
@@ -27,9 +28,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "\n",
     "def do_query(holders, page, start_date: datetime, finish_date: datetime, df):\n",
     "    # Fetch the next page and concatenate\n",
     "    events_query = holders.Query.tokenHolderTransactions(\n",
@@ -54,10 +52,11 @@
     "    return do_query(holders, page+1, start_date, finish_date, updated_df)\n",
     "\n",
     "df = pd.DataFrame()\n",
+    "results_path = \"output/results.csv\"\n",
     "\n",
-    "if os.path.exists(\"results.csv\"):\n",
+    "if os.path.exists(results_path):\n",
     "    print(\"Reading cached results\")\n",
-    "    df = pd.read_csv(\"results.csv\")\n",
+    "    df = pd.read_csv(results_path)\n",
     "else:\n",
     "    # For each day, fetch the day's events\n",
     "    start_date = datetime(2021,11,24)\n",
@@ -74,7 +73,7 @@
     "        start_date += delta\n",
     "\n",
     "    # Cache the results\n",
-    "    df.to_csv(\"results.csv\", float_format=\"%.18f\")\n",
+    "    df.to_csv(results_path, float_format=\"%.18f\")\n",
     "    print(\"Wrote cached results\")\n",
     "\n",
     "# Parse the datetime string and convert to date\n",
@@ -107,7 +106,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('token-subgraph-fetcher-CRgsdJmy-py3.10')",
+   "display_name": "Python 3.10.6 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
@@ -126,7 +125,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "81dfe72e2f90d4dcd2c9ab24c1697840cabe05ea7921080ffe1dc5e725e6a033"
+    "hash": "341cc6fbfa6d83fcf2f734022b9c34321423269fff8f7b8220c613f73311937b"
    }
   }
  },
